spacing-issues-fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -447,6 +447,9 @@ h3 {
 .flexdisp {
   display: flex;;
 }
+.margintopmax {
+  margin-top: 200px !important;
+}
 
 .countdown {
   font-weight: bold;
